# model-fitting

./: .gitignore  pyproject.toml
rf_model/: apply_model.py  confusing_matrix.py  create_csv_files.py  data.py  generate_heatmap.py  hyperparameter.py  predict.py  select_best_model.py  single_feature.py  train_random_forest.py
