[tool.poetry]
name = "rf-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
click = "^8.1.7"


[tool.black]
line-length = 88
target-version = ['py311']


[tool.mypy]
plugins = "numpy.typing.mypy_plugin"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
evaluate-single-features = "rf_model.single_feature:evaluate_single_features"
generate-hyperparameters = "rf_model.hyperparameter:generate_hyperparameters"
train-rf = "rf_model.train_random_forest:train_rf"
select-best-model = "rf_model.select_best_model:select_best_model"
create-csv-files = "rf_model.create_csv_files:create_csv_files"
generate-heatmap = "rf_model.generate_heatmap:generate_heatmap"
predict = "rf_model.predict:predict"